# delica

./: .pre-commit-config.yaml  LICENSE  README.md  endpoints.py  pyproject.toml
delica/: __init__.py  builder.py  endpoints.py  exceptions.py  pyproject.toml  van.py
delica/models/: __init__.py  baseModel.py  people.py
