[tool.poetry]
name = "delica"
version = "0.1.0"
description = ""
authors = ["Isaac Flores-Huerta <isaac@flores-huerta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"
coverage = "^7.6.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
ignore = ["D203"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

